# TASK-req_32794210abb0

./: metadata.json
repo/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  report.md  run_tests.sh
repo/.tmp/: partial_pass_report.md
repo/migrations/2026-01-01-000001_identity/: down.sql  up.sql
repo/migrations/2026-01-01-000002_stores_audit/: down.sql  up.sql
repo/migrations/2026-01-01-000003_lost_found/: down.sql  up.sql
repo/migrations/2026-01-01-000004_assets/: down.sql  up.sql
repo/migrations/2026-01-01-000005_volunteers/: down.sql  up.sql
repo/migrations/2026-01-01-000006_packages/: down.sql  up.sql
repo/migrations/2026-01-01-000007_notifications/: down.sql  up.sql
repo/migrations/2026-01-01-000008_audit_fixes/: down.sql  up.sql
repo/migrations/2026-01-01-000009_audit_round2/: down.sql  up.sql
repo/migrations/2026-01-01-000010_idempotency_drop_legacy/: down.sql  up.sql
repo/migrations/2026-01-01-000011_packages_defer_fk/: down.sql  up.sql
repo/src/: config.rs  db.rs  errors.rs  main.rs  metrics.rs  schema.rs
repo/src/handlers/: admin.rs  assets.rs  attachments.rs  auth.rs  diag.rs  health.rs  lost_found.rs  mod.rs  notifications.rs  packages.rs  volunteers.rs
repo/src/middleware/: auth.rs  (+5 more)
repo/tests/: api_access_log.rs  api_admin.rs  api_asset_transitions.rs  api_assets.rs  api_attachment_bytes.rs  api_attachment_errors.rs  api_audit_trail.rs  api_auth.rs  api_bulk_idempotency.rs  api_db_contention.rs  api_db_down.rs  api_deactivated_user.rs  api_idempotency.rs  api_load.rs  api_lost_found.rs  api_lost_found_cleanup.rs  api_maintenance.rs  api_notifications.rs  api_offline.rs  api_package_extra.rs  api_packages.rs  api_rate_limit.rs  api_rbac.rs  api_review_notifications.rs  api_session_idle.rs  api_session_ttl.rs  api_smoke.rs  api_subscriptions.rs  api_templates.rs  api_unauth.rs  api_volunteers.rs
(+33 files in other folders)
