[package]
name = "civicops"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
diesel = { version = "~2.2", default-features = false, features = ["postgres", "uuid", "chrono", "numeric", "r2d2", "serde_json"] }
diesel_migrations = { version = "~2.2", default-features = false, features = ["postgres"] }
r2d2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
image = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
rand = "0.8"
base64 = "0.21"
bigdecimal = { version = "0.4", features = ["serde"] }
once_cell = "1"
hex = "0.4"
regex = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serial_test = "3"
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }

[[bin]]
name = "civicops"
path = "src/main.rs"

[profile.release]
# Keep peak compile memory low for constrained Docker Desktop setups. These
# settings trade a small amount of runtime performance for drastically lower
# RSS while compiling the heavy generic crates (diesel, actix-web, image).
codegen-units = 256
lto = false
incremental = false
debug = false
opt-level = 1
strip = "symbols"

[profile.dev]
# Same rationale for the test container which builds dev-profile binaries.
debug = 0
incremental = false
codegen-units = 256

[profile.test]
debug = 0
incremental = false
codegen-units = 256
